ch7-gatekeeper-k8s/examples/validating/deny/constraint-templates/0-denyall.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sdenyall
  labels:
    policy.jimmyray.io/gatekeeper: template 
spec:
  crd:
    spec:
      names:
        kind: K8sDenyAll
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdenyall

        violation[{"msg": msg}] {
          # input.review.kind.kind == "Pod"
          # msg := sprintf("REVIEW OBJECT: %v", [input.review])
          msg := sprintf("INPUT: %v", [input])
        }
